# polyjuiced

./: .env.template  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  requirements.txt
mercury/: README.md  pyproject.toml  validation_report.json
mercury/config/: default.toml  production.toml
mercury/docker/: .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  prometheus-alerts.yml  prometheus-prod.yml  prometheus.yml
mercury/docs/: DEPLOYMENT.md  PERFORMANCE.md  parallel_validation_report.md
mercury/scripts/: __init__.py  migrate_from_polyjuiced.py  parallel_validation.py
mercury/src/mercury/: __init__.py  __main__.py  app.py
mercury/tests/: conftest.py
mercury/tests/e2e/: __init__.py  conftest.py  test_full_trading_flow.py
mercury/tests/integration/: test_clob.py  test_gamma.py  test_market_data_redis.py  test_polymarket_clients.py
mercury/tests/performance/: __init__.py  conftest.py  test_load.py
mercury/tests/smoke/: test_phase1_core.py  test_phase2_integrations.py  test_phase3_market_data.py  test_phase4_persistence.py  test_phase5_execution.py  test_phase6_strategy.py  test_phase7_risk.py  test_phase8_settlement.py  test_phase9_e2e.py
mercury/tests/unit/: test_binance_price_feed.py  test_config.py  test_ctf.py  test_events.py  test_execution.py  test_gabagool.py  test_health.py  test_market_data.py  test_market_finder.py  test_metrics.py  test_migration.py  test_orderbook.py  test_parallel_validation.py  test_polygon_client.py  test_retry.py  test_risk_manager.py  test_settlement.py  test_settlement_events.py  (+6 more)
(+200 files in other folders)
