[project]
name = "mercury"
version = "0.1.0"
description = "Polymarket trading bot with modular event-driven architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mercury Team"}
]
keywords = ["trading", "polymarket", "prediction-markets", "arbitrage"]

dependencies = [
    "redis>=5.0.0",
    "structlog>=24.0.0",
    "tomli>=2.0.0",
    "prometheus-client>=0.19.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
    # Phase 2: Integration layer
    "httpx>=0.26.0",
    "websockets>=12.0",
    "py-clob-client>=0.15.0",
    "web3>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
mercury = "mercury.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mercury"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
